--- a/package.json
+++ b/package.json
@@ -1,66 +1,70 @@
 {
-    "name": "dragon-editor",
-    "version": "3.4.5",
-    "description": "Javascript WYSIWYG editor in Nuxt3!",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/lovefields/dragonEditor.git"
-    },
-    "license": "MIT",
-    "type": "module",
-    "exports": {
-        ".": {
-            "types": "./dist/types.d.ts",
-            "import": "./dist/module.mjs",
-            "require": "./dist/module.cjs"
-        }
-    },
-    "main": "./dist/module.cjs",
-    "types": "./dist/types.d.ts",
-    "files": [
-        "dist"
-    ],
-    "scripts": {
-        "prepack": "nuxt-module-build",
-        "dev": "nuxi dev playground",
-        "dev:build": "nuxi build playground",
-        "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
-        "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
-        "lint": "eslint .",
-        "test": "vitest run",
-        "test:watch": "vitest watch"
-    },
-    "dependencies": {
-        "@nuxt/kit": "^3.5.0",
-        "@pinia/nuxt": "^0.5.3",
-        "highlight.js": "^11.10.0",
-        "sass": "^1.77.8"
-    },
-    "devDependencies": {
-        "@nuxt/eslint-config": "^0.1.1",
-        "@nuxt/module-builder": "^0.3.1",
-        "@nuxt/schema": "^3.5.0",
-        "@nuxt/test-utils": "^3.5.0",
-        "@types/node": "^18",
-        "changelogen": "^0.5.3",
-        "eslint": "^8.40.0",
-        "nuxt": "^3.5.0",
-        "sass-embedded": "^1.77.8",
-        "vitest": "^0.31.0"
-    },
-    "keywords": [
-        "editor",
-        "wysiwyg-editor",
-        "korean",
-        "language",
-        "nuxt3"
-    ],
-    "author": "Lovefields <lovefield@dico.me> (https://dico.me)",
-    "bugs": {
-        "url": "https://github.com/lovefields/dragonEditor/issues"
-    },
-    "homepage": "https://github.com/lovefields/dragonEditor#readme",
-    "resolutions": {
-        "typescript": "5.1.6"
+  "name": "dragon-editor",
+  "version": "3.4.5",
+  "description": "Javascript WYSIWYG editor in Nuxt3!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lordcrainer/dragonEditor.git"
+  },
+  "license": "MIT",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/types.d.ts",
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
     }
+  },
+  "main": "./dist/module.cjs",
+  "types": "./dist/types.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "prepack": "nuxt-module-build",
+    "dev": "nuxi dev playground",
+    "dev:build": "nuxi build playground",
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest watch"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
+    "access": "public"
+  },
+  "dependencies": {
+    "@nuxt/kit": "^3.5.0",
+    "@pinia/nuxt": "^0.5.3",
+    "highlight.js": "^11.10.0",
+    "sass": "^1.77.8"
+  },
+  "devDependencies": {
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxt/module-builder": "^0.3.1",
+    "@nuxt/schema": "^3.5.0",
+    "@nuxt/test-utils": "^3.5.0",
+    "@types/node": "^18",
+    "changelogen": "^0.5.3",
+    "eslint": "^8.40.0",
+    "nuxt": "^3.5.0",
+    "sass-embedded": "^1.77.8",
+    "vitest": "^0.31.0"
+  },
+  "keywords": [
+    "editor",
+    "wysiwyg-editor",
+    "korean",
+    "language",
+    "nuxt3"
+  ],
+  "author": "Lovefields <lovefield@dico.me> (https://dico.me)",
+  "bugs": {
+    "url": "https://github.com/lovefields/dragonEditor/issues"
+  },
+  "homepage": "https://github.com/lovefields/dragonEditor#readme",
+  "resolutions": {
+    "typescript": "5.1.6"
+  }
 }
